--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angularfire2": "^4.0.0-rc.2",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "firebase": "^4.4.0",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "mdi": "^2.0.46",
