--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.3",
+    "@angular/animations": "^4.4.4",
     "@angular/cdk": "^2.0.0-beta.11",
-    "@angular/common": "^4.4.3",
-    "@angular/compiler": "^4.4.3",
-    "@angular/core": "^4.4.3",
-    "@angular/flex-layout": "^2.0.0-beta.9",
-    "@angular/forms": "^4.4.3",
-    "@angular/http": "^4.4.3",
-    "@angular/material": "^2.0.0-beta.11",
-    "@angular/platform-browser": "^4.4.3",
-    "@angular/platform-browser-dynamic": "^4.4.3",
-    "@angular/router": "^4.4.3",
-    "angularfire2": "^4.0.0-rc.2",
+    "@angular/common": "^4.4.4",
+    "@angular/compiler": "^4.4.4",
+    "@angular/core": "^4.4.4",
+    "@angular/flex-layout": "2.0.0-beta.9",
+    "@angular/forms": "^4.4.4",
+    "@angular/http": "^4.4.4",
+    "@angular/material": "^2.0.0-beta.12",
+    "@angular/platform-browser": "^4.4.4",
+    "@angular/platform-browser-dynamic": "^4.4.4",
+    "@angular/router": "^4.4.4",
+    "angularfire2": "^5.0.0-rc.2",
     "angulartics2": "^2.4.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
-    "firebase": "^4.4.0",
+    "firebase": "^4.5.0",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "mdi": "^2.0.46",
@@ -37,9 +37,9 @@
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.3",
-    "@angular/compiler-cli": "^4.4.3",
-    "@angular/language-service": "^4.4.3",
+    "@angular/cli": "1.4.7",
+    "@angular/compiler-cli": "^4.4.4",
+    "@angular/language-service": "^4.4.4",
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
@@ -56,6 +56,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.4"
   }
 }
